--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
       <artifactId>curator-recipes</artifactId>
       <version>2.5.0</version>
     </dependency>
+
+
+    <!-- netty -->
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
